welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: not found: type color
  var tab = new Array[color](getMondeHauteur())
                      ^Array1:15: warning: enclosing method motif has result type Unit: return value discarded
  return tab()
  ^