welcome.lessons.welcome.array.basics.Array1.scala.code
def brosse(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def motif(){
  var tab = new Array[color](getMondeHauteur())
 // tab(0)=getCouleurSol()
 // for (i<-0 to getMondeHauteur()-1){
 //   avance()
 //   tab(i+1)=getCouleurSol()
//  }
  return tab()
}


override def run() {
  motif()
}